Finalizando mobile first

--- a/src/assets/styles/css/components/buscaPsico.css
+++ b/src/assets/styles/css/components/buscaPsico.css
@@ -2,7 +2,7 @@
 
 #buscaPsicologa {
     padding-top: 2cqh;
-    background: linear-gradient(90deg, #E9F7FA 55%, #BAE6F1 100);
+    background: linear-gradient(90deg, #E9F7FA 55%, #BAE6F1 100%);
 }
 
 .busca__titulo {
