--- a/src/assets/styles/css/components/localAtend.css
+++ b/src/assets/styles/css/components/localAtend.css
@@ -1,8 +1,10 @@
 @import url(../var/variaveis.css);
 
 #atendimento {
-    background-color: linear-gradient(90deg, #E9F7FA 55%, #BAE6F1 100);
+    background: linear-gradient(90deg, #E9F7FA 55%, #BAE6F1 100%);
     text-align: center;
+    margin-top: 50px;
+    padding: 30px 0 50px 0;
 }
 
 #atendimento h2 {
@@ -11,9 +13,59 @@
     color: var(--texto-cor-bold);
 }
 
-#atendimento p {
+#atendimento > p {
+    margin-top: -20px;
     font-family: var(--texto-Poppins);
     font-size: 20px;
     font-weight: 300;
     color: var(--texto-cor-frase);
+}
+
+.referencias_atendimento {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 25px;
+}
+
+.referencias_atendimento a {    
+    font-family: var(--texto-Poppins);
+    text-decoration: none;
+    color: var(--texto-cor-bold);
+}
+
+.whatsapp a {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.email a {
+    display: flex;
+    align-items: center;
+    gap: 12px;
+}
+
+.endereco {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.endereco p {
+    text-align: left;
+    width: 280px;
+    font-size: 16px;
+    color: var(--texto-cor-bold);
+}
+
+.btn-local {
+    display: block;
+    margin: 10px auto auto auto;
+    font-weight: 800;
+    width: 290px;
+    border-radius: 8px;
+    padding: 8px 16px;
+    background-color: var(--bg-destaque);
+    box-shadow: 4px 4px 0 var(--bg-destaque-fundo);
 }
