--- a/src/assets/styles/css/components/primSessao.css
+++ b/src/assets/styles/css/components/primSessao.css
@@ -4,6 +4,7 @@
     font-family: var(--texto-Poppins);
     font-size: 38px;
     color: var(--texto-cor-bold);
+    text-align: center;
 }
 
 .container__pSessao {
