--- a/src/assets/styles/css/components/beneficios.css
+++ b/src/assets/styles/css/components/beneficios.css
@@ -66,3 +66,12 @@
 .beneficios__img_decorativa {
     display: none;
 }
+
+@media screen and (min-width: 768px) {
+    .beneficios_card_container {
+        width: 35rem;
+        flex-direction: row;
+        flex-wrap: wrap;
+        margin-bottom: 45px;
+    }
+}
