--- a/src/assets/styles/css/components/primSessao.css
+++ b/src/assets/styles/css/components/primSessao.css
@@ -86,3 +86,26 @@
     width: 322px;
     height: 214px;
 }
+
+@media screen and (min-width: 768px) {
+    .ps__titulo {
+        margin-bottom: 45px;
+    }
+
+    .container__pSessao {
+        flex-direction: row;
+        gap: 40px;
+        margin-bottom: 50px;
+    }
+
+    .container_grid__img {
+        height: 520px;
+        width: 400px;
+        column-gap: 20px;
+    }
+
+    .pSessaoImg {
+        transform: scale(1.2);
+    }
+
+}
