--- a/src/assets/styles/css/var/variaveis.css
+++ b/src/assets/styles/css/var/variaveis.css
@@ -12,6 +12,7 @@
 --texto-cor-suave-m: #7F7F7F;
 --texto-cor-bold: #0C3D49;
 --texto-cor-frase: #1A839D;
+--texto-cor-lhover: #FF7C1D;
 
     /* Background */
 --bg-header: #E9F7FA;
