--- a/src/assets/styles/css/components/buscaPsico.css
+++ b/src/assets/styles/css/components/buscaPsico.css
@@ -21,7 +21,7 @@
 #card__slider {
     display: flex;
     gap: 1.25rem;
-    overflow-x: auto;
+    overflow: scroll;
     width: 340px;
 }
 
@@ -54,13 +54,18 @@
     box-shadow: 37px 19px 17px rgba(0, 0, 0, 0.01), 21px 11px 14px rgba(0, 0, 0, 0.05), 9px 5px 10px rgba(0, 0, 0, 0.09), 2px 1px 6px rgba(0, 0, 0, 0.1);
     width: 270px;
     text-align: center;
+    transition: all .8s ease-in;
+}
+
+.btn-buscar:hover {
+    background-color: var(--bg-card-p-sessao-fundo);
 }
 
 .psicologa {
     text-align: center;
 }
 
-.psicologa > img {
+.psicologa>img {
     width: 280px;
     height: 490px;
 }
