--- a/src/assets/styles/css/components/primSessao.css
+++ b/src/assets/styles/css/components/primSessao.css
@@ -18,6 +18,7 @@
     display: flex;
     flex-direction: column;
     gap: 12px;
+    position: relative;
 }
 
 .pSessao__cards .card__item {
@@ -107,5 +108,19 @@
     .pSessaoImg {
         transform: scale(1.2);
     }
+}
 
+@media screen and (min-width: 1024px) {
+    .pSessao__cards span img {
+        display: block;
+        position: absolute;
+        left: -50px;
+    }
+
+    .pSessao__cards span:nth-of-type(1) img {
+        top: 150px;
+    }
+    .pSessao__cards span:nth-of-type(2) img {
+        top: 330px;
+    }
 }
